stops the default unit list from wrapping unit title headers so the units display more uniformly on the page.

--- a/themes/mountainsunset/css/css.css
+++ b/themes/mountainsunset/css/css.css
@@ -1646,7 +1646,17 @@ animated buttons - animate the text inside prev and next buttons
 .vrp-item .vrp-caption {
     padding:5px;
 }
-.vrp-item .vrp-caption h4 { color:#383838; margin:0 0 10px 15px!important; padding:0 !important; font-weight:bold !important;}
+.vrp-item .vrp-caption h4 {
+    color:#383838;
+    margin:0 0 10px 15px!important;
+    padding:0 !important;
+    font-weight:bold !important;
+    overflow-y: hidden;
+    overflow-x: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+}
+
 .vrp-item .vrp-thumbnail:hover .vrp-actions {
     top:0;
 }
